🔧 Fix GitHub Actions workflow
- Remove references to non-existent files
- Simplify build process using existing files
- Fix npm ci dependencies installation
- Add proper artifact handling
- Enable automatic releases

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,21 +20,35 @@ jobs:
           node-version: '18'
           cache: 'npm'
       
-      - name: Setup Project
-        run: |
-          cp package-minimal.json package.json
-          cp main-minimal.js main.js
-          npm ci
+      - name: Install Dependencies
+        run: npm ci
           
       - name: Build Electron App  
         run: npm run build
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.os }}-build
+          path: dist/
           
-      - name: Release
+  release:
+    if: startsWith(github.ref, 'refs/tags/')
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: dist/
+          
+      - name: Create Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: dist/**/*
+          draft: false
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
