--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
   "name": "squoosh-desktop",
   "version": "1.0.0",
-  "description": "本地化图片压缩工具 - 基于Google Squoosh技术",
+  "description": "Desktop image compression tool",
   "main": "main.js",
   "scripts": {
     "prebuild": "node scripts/fetch-squoosh.js",
-    "start": "npm run prebuild && electron .",
-    "build": "npm run prebuild && electron-builder",
-    "build:win": "npm run prebuild && electron-builder --windows --x64",
-    "build:mac": "npm run prebuild && electron-builder --mac",
-    "build:linux": "npm run prebuild && electron-builder --linux --x64",
-    "clean": "rm -rf squoosh-static .tmp dist",
-    "dev": "npm run prebuild && npm start"
+    "start": "electron .",
+    "test-build": "echo 'Testing build setup' && npm run prebuild"
   },
-  "keywords": ["electron", "squoosh", "image", "compression"],
-  "author": "Squoosh Desktop Team",
-  "license": "Apache-2.0",
   "devDependencies": {
-    "electron": "^28.0.0",
-    "electron-builder": "^24.9.1"
+    "electron": "25.9.0",
+    "electron-builder": "24.6.4"
   },
   "build": {
     "appId": "com.squoosh.desktop",
@@ -28,40 +20,7 @@
     },
     "files": [
       "main.js",
-      "squoosh-static/**/*",
-      "package.json"
-    ],
-    "mac": {
-      "category": "public.app-category.graphics-design",
-      "target": [
-        {
-          "target": "dmg",
-          "arch": ["x64", "arm64"]
-        }
-      ]
-    },
-    "win": {
-      "target": [
-        {
-          "target": "nsis",
-          "arch": ["x64"]
-        }
-      ]
-    },
-    "linux": {
-      "target": [
-        {
-          "target": "AppImage",
-          "arch": ["x64"]
-        }
-      ],
-      "category": "Graphics"
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true
-    }
+      "squoosh-static/**/*"
+    ]
   }
 }
