--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: 🚀 Final Build - All Platforms
+name: 🚀 Cross-Platform Build & Release
 
 on:
   workflow_dispatch:
@@ -38,7 +38,7 @@ jobs:
         run: npm run prebuild
         
       - name: 🔨 Build for ${{ matrix.name }}
-        run: npx electron-builder --${{ matrix.platform }}
+        run: npx electron-builder --${{ matrix.platform }} --publish=never
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
@@ -47,11 +47,54 @@ jobs:
         run: |
           echo "=== Build completed for ${{ matrix.name }} ==="
           ls -la dist/ 2>/dev/null || echo "No dist directory"
-          find dist/ -type f 2>/dev/null || echo "No files in dist"
+          find dist/ -type f -name "*.exe" -o -name "*.dmg" -o -name "*.AppImage" -o -name "*.deb" 2>/dev/null || echo "No installer files found"
           
-      - name: 📤 Upload ${{ matrix.name }} Build
+      - name: 📤 Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: squoosh-desktop-${{ matrix.platform }}
           path: dist/
           retention-days: 30
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    
+    steps:
+      - name: 📥 Download All Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: ./artifacts
+          
+      - name: 📋 List Downloaded Files
+        run: |
+          echo "=== Downloaded Artifacts ==="
+          find ./artifacts -type f -name "*.exe" -o -name "*.dmg" -o -name "*.AppImage" -o -name "*.deb"
+          
+      - name: 🚀 Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            ./artifacts/**/*.exe
+            ./artifacts/**/*.dmg
+            ./artifacts/**/*.AppImage
+            ./artifacts/**/*.deb
+          generate_release_notes: true
+          name: Squoosh Desktop ${{ github.ref_name }}
+          body: |
+            ## 🎉 Squoosh Desktop ${{ github.ref_name }}
+            
+            ### 📦 下载安装包 / Download Installers:
+            
+            - **Windows**: `*.exe` - NSIS安装程序
+            - **macOS**: `*.dmg` - 拖拽安装包  
+            - **Linux**: `*.AppImage` - 直接运行文件
+            
+            ### ✨ 功能特性:
+            - 🎯 极致轻量: 24KB仓库实现50MB完整功能
+            - 🌐 智能联网: 自动获取最新Google Squoosh
+            - 🔄 离线友好: 网络异常时友好提示
+            - 🖥️ 跨平台: 完美支持Windows/macOS/Linux
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
