fix: 修复打包和跨平台兼容性问题
核心修复:
- 🔧 移除main.js中的Express依赖，使用Node.js内置模块
- 📦 更新package.json打包配置，包含启动脚本
- 🪟 添加Windows兼容的start.bat脚本
- 🎯 确保打包后的应用包含完整启动功能
- 📚 添加详细的README文档

技术改进:
- 使用纯Node.js HTTP服务器，避免第三方依赖
- 支持ARM64和x64多架构打包
- 智能端口检测和MIME类型处理
- 完整的错误处理和资源清理

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "prebuild": "node scripts/fetch-squoosh.js",
     "start": "electron .",
     "build": "npm run prebuild && electron-builder",
-    "build:win": "npm run prebuild && electron-builder --win32",
-    "build:mac": "npm run prebuild && electron-builder --darwin",
+    "build:win": "npm run prebuild && electron-builder --win",
+    "build:mac": "npm run prebuild && electron-builder --mac",
     "build:linux": "npm run prebuild && electron-builder --linux"
   },
   "keywords": [
@@ -31,19 +31,47 @@
     },
     "files": [
       "main.js",
+      "start.sh",
+      "start.bat",
       "squoosh-static/**/*",
-      "package.json"
+      "package.json",
+      "README.md"
+    ],
+    "extraResources": [
+      "start.sh",
+      "start.bat"
     ],
     "mac": {
       "category": "public.app-category.graphics-design",
-      "target": "dmg"
+      "target": [
+        {
+          "target": "dmg",
+          "arch": ["x64", "arm64"]
+        }
+      ]
     },
     "win": {
-      "target": "nsis"
+      "target": [
+        {
+          "target": "nsis",
+          "arch": ["x64", "ia32"]
+        }
+      ]
     },
     "linux": {
-      "target": "AppImage",
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": ["x64", "arm64"]
+        }
+      ],
       "category": "Graphics"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
     }
   }
 }
