--- a/squoosh-static/manifest.json
+++ b/squoosh-static/manifest.json
@@ -1,1 +1,19 @@
-{"name":"Squoosh","short_name":"Squoosh","start_url":"/?utm_medium=PWA&utm_source=launcher","display":"standalone","orientation":"any","background_color":"#fff","theme_color":"#ff3385","icons":[{"src":"/c/icon-large-cb438cac.png","type":"image/png","sizes":"1024x1024"},{"src":"/c/icon-large-maskable-c2078ced.png","type":"image/png","sizes":"1024x1024","purpose":"maskable"}],"description":"Compress and compare images with different codecs, right in your browser.","lang":"en","categories":["photo","productivity","utilities"],"screenshots":[{"src":"/c/screenshot1-0ff68546.png","type":"image/png","sizes":"540x720","form_factor":"narrow"},{"src":"/c/screenshot2-1f78c4db.jpg","type":"image/jpeg","sizes":"540x720","form_factor":"narrow"},{"src":"/c/screenshot3-c1e02216.jpg","type":"image/jpeg","sizes":"540x720","form_factor":"narrow"},{"src":"/c/screenshot4-3a706c3c.png","type":"image/png","sizes":"1024x593","form_factor":"wide"},{"src":"/c/screenshot5-ea50826f.jpg","type":"image/jpeg","sizes":"1024x593","form_factor":"wide"},{"src":"/c/screenshot6-0168d284.jpg","type":"image/jpeg","sizes":"1024x593","form_factor":"wide"}],"share_target":{"action":"/?utm_medium=PWA&utm_source=share-target&share-target","method":"POST","enctype":"multipart/form-data","params":{"files":[{"name":"file","accept":["image/*"]}]}}}
+{
+  "name": "图小小",
+  "short_name": "图小小",
+  "description": "图小小 - 专业图片压缩优化工具，支持WebP、AVIF、JPEG、PNG等格式，本地处理保护隐私",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#667eea",
+  "orientation": "any",
+  "icons": [
+    {
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E🎨%3C/text%3E%3C/svg%3E",
+      "sizes": "192x192",
+      "type": "image/svg+xml"
+    }
+  ],
+  "lang": "zh-CN",
+  "categories": ["photo", "productivity", "utilities"]
+}
